@@ -1692,3 +1692,6 @@ Fixed rad -v N specification to use actual view name if one.
 
 Fixed error in mkillum calculation where it neglected indirect
 source contributions from BTDF illum's.
+
+Added GMT and LATLONG header lines for Greenwich Mean Time and
+degrees North Latitude / East Longitude.
